# IDA-String-Reference-Locator-Plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: IDAStringList.cpp  IDAStringList.hpp  Plugin.cpp  Plugin.hpp  PluginInterface.cpp
x64/: CMakeLists.txt
x86/: CMakeLists.txt
